WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199623
Fix LOG_DISABLED and TREE_DEBUGGING enabled build.
https://bugs.webkit.org/show_bug.cgi?id=199623
Summary
Fix LOG_DISABLED and TREE_DEBUGGING enabled build.
alan
Reported
2019-07-09 09:42:26 PDT
the build is very broken.
Attachments
Patch
(1.26 KB, patch)
2019-07-09 09:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(1.30 KB, patch)
2019-07-09 09:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2019-07-09 09:43:20 PDT
and it's been bothering me
Radar WebKit Bug Importer
Comment 2
2019-07-09 09:43:56 PDT
<
rdar://problem/52837648
>
alan
Comment 3
2019-07-09 09:43:59 PDT
Created
attachment 373725
[details]
Patch
alan
Comment 4
2019-07-09 09:50:32 PDT
Created
attachment 373726
[details]
Patch
WebKit Commit Bot
Comment 5
2019-07-09 11:26:37 PDT
Comment on
attachment 373726
[details]
Patch Clearing flags on attachment: 373726 Committed
r247262
: <
https://trac.webkit.org/changeset/247262
>
WebKit Commit Bot
Comment 6
2019-07-09 11:26:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug