Fix LOG_DISABLED and TREE_DEBUGGING enabled build. https://bugs.webkit.org/show_bug.cgi?id=199623 <rdar://problem/52837648>

Reviewed by Simon Fraser.

* rendering/RenderLayerCompositor.cpp:


Canonical link: https://commits.webkit.org/213510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247262 268f45cc-cd09-0410-ab3c-d52691b4dbfc